--- a/index.html
+++ b/index.html
@@ -1,35 +1,29 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <title>Aimée-vous les jeux de mots?</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-        <link href="assets/css/main.css?v=0.1" rel="stylesheet">
-    </head>
-    <body>
-        <h1 id="result"></h1>
-        <button id="regenerate" class="button">Encore</button>
-        <div id="edit_panel" class="row">
-            <div id="nom">
-                <label for="new_nom">Nom <small id="noms_count"></small>
-                <input type="text" name="new_nom" id="new_nom" placeholder="Ajouter un Noms" /></label>
-                <button id="add_nom" class="button">+</button>
-            </div>
-            <div id="adjectif">
-                <label for="new_adjectif">Adjectif <small id="adjectifs_count"></small>
-                <input type="text" name="new_adjectif" id="new_adjectif" placeholder="Ajouter un adjectif" /></label>
-                <button id="add_adjectif" class="button">+</button>
-            </div>
-        </div>
-        <button id="history_toggler" class="button closed">&larr;</button>
-        <div id="history" class="closed"></div>
+<head>
+	<meta charset="UTF-8">
+	<title>Tu veux un nom, moussaillon?</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <script src="assets/js/json.js"></script>
-        <script src="assets/js/files.js"></script>
-        <script src="assets/js/ui.js"></script>
-        <script src="assets/js/history.js"></script>
-        <script src="assets/js/main.js"></script>
-    </body>
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Josefin+Sans:wght@400;600&display=swap" rel="stylesheet">
+	<link href="assets/css/main.css?v=0.1" rel="stylesheet">
+</head>
+<body>
+<div class="inner">
+	<p class="pre-title">Ton nom est :</p>
+	<h1 id="result"></h1>
+	<button id="regenerate" class="button">Donne-moi un autre nom, moussaillon!</button>
+</div>
+
+
+<script
+	src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+	integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+	crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery.ripples@0.6.3/dist/jquery.ripples.min.js"></script>
+<script src="assets/js/main.js"></script>
+</body>
 </html>
